--- a/install/Brewfile
+++ b/install/Brewfile
@@ -11,8 +11,8 @@ brew 'node'
 
 cask '1password'
 cask 'alfred'
-cask 'brave-browser'
 cask 'bartender'
+cask 'brave-browser'
 cask 'discord'
 cask 'divvy'
 cask 'dropbox'
@@ -22,6 +22,7 @@ cask 'firefox'
 cask 'fork'
 cask 'google-chrome-canary'
 cask 'google-chrome'
+cask 'hammerspoon'
 cask 'iterm2'
 cask 'microsoft-office'
 cask 'slack'
