feat: sync vs-code settings

--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -8,85 +8,95 @@
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.fontFamily": "Dank Mono, JetBrains Mono, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontSize": 13,
+  "editor.fontLigatures": true,
+  "editor.fontSize": 14,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.guides.bracketPairs": "active",
+  "editor.inlineSuggest.enabled": true,
+  "editor.lineNumbers": "off",
+  "editor.minimap.enabled": false,
+  "editor.renderWhitespace": "all",
+  "editor.rulers": [80],
+  "editor.suggestSelection": "first",
   "editor.tokenColorCustomizations": {
     "textMateRules": [
       {
         "scope": [
           "comment",
           "emphasis",
-          "entity.name.method.js",
           "entity.name.class.js",
+          "entity.name.method.js",
           "entity.name.tag.doctype",
-          "entity.other.attribute-name",
           "entity.other.attribute-name.tag.jade",
           "entity.other.attribute-name.tag.pug",
-          "keyword",
-          "keyword.control",
-          "keyword.operator.comparison",
+          "entity.other.attribute-name",
+          "italic",
+          "keyword.control.class.ruby",
+          "keyword.control.def.ruby",
           "keyword.control.flow.js",
           "keyword.control.flow.ts",
           "keyword.control.flow.tsx",
-          "keyword.control.ruby",
-          "keyword.control.module.ruby",
-          "keyword.control.class.ruby",
-          "keyword.control.def.ruby",
-          "keyword.control.loop.js",
-          "keyword.control.loop.ts",
-          "keyword.control.import.js",
-          "keyword.control.import.ts",
-          "keyword.control.import.tsx",
           "keyword.control.from.js",
           "keyword.control.from.ts",
           "keyword.control.from.tsx",
-          "keyword.operator.expression.delete",
-          "keyword.operator.new",
-          "keyword.operator.expression",
+          "keyword.control.import.js",
+          "keyword.control.import.ts",
+          "keyword.control.import.tsx",
+          "keyword.control.loop.js",
+          "keyword.control.loop.ts",
+          "keyword.control.module.ruby",
+          "keyword.control.ruby",
+          "keyword.control",
           "keyword.operator.cast",
+          "keyword.operator.comparison",
+          "keyword.operator.expression.delete",
+          "keyword.operator.expression",
+          "keyword.operator.logical.python",
+          "keyword.operator.new",
           "keyword.operator.relational",
           "keyword.operator.sizeof",
-          "keyword.operator.logical.python",
-          "italic",
-          "markup.italic",
-          "markup.quote",
+          "keyword",
           "markup.changed",
-          "markup.italic.markdown",
-          "markup.quote.markdown",
           "markup.deleted.diff",
           "markup.inserted.diff",
-          "meta.delimiter.period",
-          "meta.diff.header.git",
-          "meta.diff.header.from-file",
-          "meta.diff.header.to-file",
-          "meta.tag.sgml.doctype",
-          "meta.var.expr",
+          "markup.italic.markdown",
+          "markup.italic",
+          "markup.quote.markdown",
+          "markup.quote",
           "meta.class meta.method.declaration meta.var.expr storage.type.js",
           "meta.decorator punctuation.decorator",
+          "meta.delimiter.period",
+          "meta.diff.header.from-file",
+          "meta.diff.header.git",
+          "meta.diff.header.to-file",
           "meta.selector",
+          "meta.tag.sgml.doctype",
+          "meta.var.expr",
           "punctuation.accessor",
           "punctuation.definition.comment",
           "punctuation.definition.template-expression.begin",
           "punctuation.definition.template-expression.end",
           "punctuation.section.embedded",
           "quote",
-          "source.js constant.other.object.key.js string.unquoted.label.js",
-          "source.go keyword.package.go",
-          "source.go keyword.import.go",
-          "source.go keyword.function.go",
-          "source.go keyword.type.go",
-          "source.go keyword.struct.go",
-          "source.go keyword.interface.go",
-          "source.go keyword.const.go",
-          "source.go keyword.var.go",
-          "source.go keyword.map.go",
           "source.go keyword.channel.go",
+          "source.go keyword.const.go",
           "source.go keyword.control.go",
-          "storage",
-          "storage.type",
+          "source.go keyword.function.go",
+          "source.go keyword.import.go",
+          "source.go keyword.interface.go",
+          "source.go keyword.map.go",
+          "source.go keyword.package.go",
+          "source.go keyword.struct.go",
+          "source.go keyword.type.go",
+          "source.go keyword.var.go",
+          "source.js constant.other.object.key.js string.unquoted.label.js",
           "storage.modifier",
           "storage.type.property.js",
           "storage.type.property.ts",
           "storage.type.property.tsx",
+          "storage.type",
+          "storage",
           "tag.decorator.js entity.name.tag.js",
           "tag.decorator.js",
           "text.html.basic entity.other.attribute-name.html",
@@ -100,26 +110,22 @@
       }
     ]
   },
-  "editor.fontLigatures": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.guides.bracketPairs": "active",
-  "editor.lineNumbers": "off",
-  "editor.minimap.enabled": false,
-  "editor.rulers": [80],
-  "editor.suggestSelection": "first",
+  "editor.unicodeHighlight.invisibleCharacters": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "extensions.ignoreRecommendations": true,
   "files.exclude": {
     "**/.cache": true,
+    "**/.DS_Store": true,
     "**/.git": true,
-    "**/.svn": true,
     "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true
+    "**/.svn": true,
+    "**/CVS": true
   },
   "git.confirmSync": false,
+  "gitlens.menus": false,
   "javascript.updateImportsOnFileMove.enabled": "always",
+  "terminal.integrated.fontSize": 14,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "window.title": "${activeEditorMedium}${separator}${rootName}",
