feat(brew): alfred → raycast

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -11,7 +11,6 @@ brew 'mas'
 brew 'node'
 
 cask '1password'
-cask 'alfred'
 cask 'bartender'
 cask 'brave-browser'
 cask 'discord'
@@ -25,6 +24,7 @@ cask 'google-chrome'
 cask 'hammerspoon'
 cask 'iterm2'
 cask 'microsoft-office'
+cask 'raycast'
 cask 'slack'
 cask 'spotify'
 cask 'visual-studio-code-insiders'
